fix: adjust z-index in section products-container

--- a/CSS/global.CSS
+++ b/CSS/global.CSS
@@ -31,6 +31,7 @@ header {
   top: 0;
   width: 100%;
   transition: background-color 0.5s, box-shadow 0.5s;
+  z-index: 1000;
 }
 
 header.scrolled {
